--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,10 @@ services:
       - ~/data:/data/db
     ports:
       - "44839:27017"
+    logging:
+      driver: "json-file"
+      options:
+        max-size: 10m
+        max-file: "3"
+        labels: "production_status"
+        env: "os"
