--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bufferutil": "^4.0.3",
-    "discord.js": "discordjs/discord.js",
+    "discord.js": "^13.0.0-dev.t1627778678.74fc23b",
     "dotenv": "^10.0.0",
     "erlpack": "discord/erlpack",
     "mongoose": "^5.13.2",
