--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,9 +10,6 @@ updates:
     commit-message:
       prefix: "Dependency"
       include: "scope"
-    allowed_updates:
-      - match:
-          update_type: "security"
   - package-ecosystem: "docker"
     directory: "/"
     schedule:
@@ -23,3 +20,4 @@ updates:
     commit-message:
       prefix: "Dependency"
       include: "scope"
+    open-pull-requests-limit: 0
