--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "node_modules/.bin/tsc -p tsconfig.json -w",
+    "build": "node_modules/.bin/tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "prod-start": "node_modules/.bin/tsc -p tsconfig.json && node dist/index.js"
   },
