--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bufferutil": "^4.0.3",
-    "discord.js": "^13.0.1",
+    "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "erlpack-but-better": "GingkathFox/erlpack",
     "mongoose": "^5.13.2",
     "utf-8-validate": "^5.0.5",
     "uuid": "^8.3.2",
